--- a/src/components/meta/CollectionPageStructuredData.astro
+++ b/src/components/meta/CollectionPageStructuredData.astro
@@ -2,7 +2,7 @@
 import { generateBreadcrumbSchema, generateCollectionSchema, organizationSchema, personSchema, websiteSchema } from '@/lib/schema'
 
 interface Props {
-  type: 'blog' | 'projects' | 'artwork'
+  type: 'blog' | 'artwork'
   name: string
   description: string
 }
