--- a/src/components/meta/ProfilePageStructuredData.astro
+++ b/src/components/meta/ProfilePageStructuredData.astro
@@ -15,7 +15,7 @@ const schema = {
     {
       '@type': 'Article',
       'headline': 'SMPEarth',
-      'url': new URL('/projects/smpearth', Astro.site).toString(),
+      'url': new URL('/blog/smpearth', Astro.site).toString(),
       'datePublished': '2019-11-22T18:34:00Z',
       'author': {
         '@id': SCHEMA_IDS.PERSON,
